# MaDe_CI_CPP_test

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.github/workflows/: cmake.yml
inc/: macros.h
src/: functions.cpp  main.cpp
test/: ut_main.cpp
